Edited all the examples

--- a/examples/01_beginner/gol.html
+++ b/examples/01_beginner/gol.html
@@ -49,7 +49,7 @@ function cacatoo(){
     */
     sim = new Simulation(config)                          // Initialise the Cacatoo simulation    
     sim.makeGridmodel("gol")                              // Build a new Gridmodel within the simulation called "gol" (Game Of Life)
-    sim.initialGrid("gol", 'alive', 1, 0.5)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
+    sim.initialGrid("gol", 'alive', 0, 1, 0.5)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
     sim.createDisplay("gol", "alive", "Game of life (white=alive)")                      // Create a display so we can see our newly made gridmodel
 
     /*
