--- a/examples/01_beginner/gol_dots.html
+++ b/examples/01_beginner/gol_dots.html
@@ -52,7 +52,7 @@ function cacatoo(){
     sim = new Simulation(config)                          // Initialise the Cacatoo simulation
     
     sim.makeGridmodel("gol")                              // Build a new Gridmodel within the simulation called "gol" (Game Of Life)
-    sim.initialGrid(sim.gol, 'alive', 1, 0.5)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
+    sim.initialGrid(sim.gol, 'alive', 0, 1, 0.1)                // Set half (50%) of the Gridmodel's grid points to 1 (alive)
     sim.createDisplay_discrete({model:"gol",property:"alive",label:"Game of life (white=alive)",drawdots:true,radius:2})                      // Create a display so we can see our newly made gridmodel
 
     
@@ -91,7 +91,7 @@ function cacatoo(){
     */
     sim.gol.update = function () {
         this.synchronous()         // Applied as many times as it can in 1/60th of a second        
-        if(this.time%1000==0) sim.sectionToPNG("canvas_holder","GoL_dots")
+        if(this.time%1000==999) sim.sectionToPNG("canvas_holder","GoL_dots")
     }
 
     /*
