Updated physics clip

--- a/examples/03_expert/aapjes.html
+++ b/examples/03_expert/aapjes.html
@@ -46,6 +46,7 @@ function cacatoo() {
     // Flock parameters
     num_boids: 0,        // Starting number of boids (flocking individuals)
     shape: 'png',        // Shape of the boids drawn (options: bird, arrow, line, rect, dot, ant)
+    mouse: 'repel',
     max_speed: 1,          // Maximum velocity of boids
     max_force: 0.1,       // Maximum steering force applied to boids (separation/cohesion/alignment rules)
     friction: 0.0,        // Frictionless monkeys, ofc
