Updated cheater example to show example OOP project

--- a/examples/02_advanced/cheater.html
+++ b/examples/02_advanced/cheater.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="../../style/cacatoo.css"> <!-- Set style sheet -->
 
 <!-- Include your model code here -->
+<script src="cheater_classes.js"> </script>
 <script src="cheater.js"> </script>
 
 <body onload="cacatoo()">
