--- a/examples/03_expert/ants_game.html
+++ b/examples/03_expert/ants_game.html
@@ -12,6 +12,7 @@
   background-color: rgb(203, 84, 160);
   margin: 0px;
   font-size: 13px;
+  overflow-x: hidden;
   }
   /* The button itself */
 button {
@@ -539,7 +540,7 @@ function cacatoo() {
   document.getElementById('Start!').style = ''
   sim.addButton("Respec gold", function () { gb6.reset(); gb1.reset();gb2.reset();gb3.reset();gb4.reset();gb5.reset(); })    
   document.getElementById('Respec gold').style = 'width:200; margin-right:3.5em; background:#e0a709AA;float: right; width:200px'
-  sim.addButton("pause/continue", function () { sim.toggle_play() })
+  
  
   
 
