--- a/examples/03_expert/aapjes.html
+++ b/examples/03_expert/aapjes.html
@@ -24,7 +24,7 @@ function cacatoo() {
   
   let simconfig = {
     title: "Aapjes", // The name of your cacatoo-simulation
-    description: "Foraging in groups", // And a description if you wish
+    description: "Foraging in groups<br><u>NOTE: REQUIRES LIVE SERVER</u>", // And a description if you wish
     maxtime: 10000, // How many time steps the model continues to run
     // (note, the onscreen FPS may drop below 60 fps when using fast mode, although many more timesteps may be handled per second)
     ncol: 300, // Number of columns (width of your grid)
