Modified diffusion function to not set the state multiple times (speeds things up)

--- a/examples/01_beginner/gol_dots.html
+++ b/examples/01_beginner/gol_dots.html
@@ -97,16 +97,14 @@ function cacatoo(){
     /*
         OPTIONAL: Now that we have everything setup, we can also add some interactive elements (buttons or sliders). See cheater.html for more examples of this. 
     */
-    sim.addPatternButton(sim.gol, 'alive')  // Note, for security reasons, this needs a local server to be run (try VSC's 'live server' plugin!)
-    sim.addButton("pause/continue", function () { sim.toggle_play() })
+    sim.addButton("Pause/continue", function () { sim.toggle_play() })
 
 
-    sim.addButton("Start/stop record", function() {
-        sim.makeMovie(sim.gol.canvases["Game of life (white=alive)"])        
-    })
+    sim.addMovieButton(sim.gol, "Game of life (purple=alive)")
+
     
 
-    sim.addButton("step", function () { sim.step(); sim.display() })    
+    sim.addButton("Step", function () { sim.step(); sim.display() })    
     sim.modifysleep = function(newvalue) { this.sleep = newvalue}
     // sim.addCustomSlider("Sleeping time (ms)",function (new_value) { sim.sleep = new_value },0,1000,1,0) // addCustomSlider(function, minimal, maximal, step-size, default, label)
     sim.start()
